tests fix
Signed-off-by: ervinn09 <81773513+ervinn09@users.noreply.github.com>